--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.6",
     "register-service-worker": "^1.7.1",
+    "vant": "^2.12.25",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
@@ -32,6 +33,7 @@
     "@vue/cli-service": "^4.5.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.0.3",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
