--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/echarts": "^4.9.10",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.6",
+    "echarts": "^4.9.0",
     "register-service-worker": "^1.7.1",
     "vant": "^2.12.25",
     "vue": "^2.6.11",
