--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "echarts": "^4.9.0",
     "register-service-worker": "^1.7.1",
     "svgo-loader": "^2.2.2",
-    "vant": "^2.12.25",
-    "vue": "^2.6.11",
+    "tslib": "^2.6.2",
+    "vant": "^2.13.2",
+    "vue": "^2.6.10",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
@@ -24,6 +25,10 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
+    "@types/node": "^20.12.11",
+    "@types/vue": "^2.0.0",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-env": "1.15.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-babel": "^4.5.0",
@@ -33,10 +38,14 @@
     "@vue/cli-plugin-typescript": "^4.5.0",
     "@vue/cli-plugin-unit-jest": "^4.5.0",
     "@vue/cli-plugin-vuex": "^4.5.0",
-    "@vue/cli-service": "^4.5.0",
+    "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/runtime-dom": "^3.4.27",
     "@vue/test-utils": "^1.0.3",
+    "babel-core": "^6.26.3",
     "babel-plugin-import": "^1.13.3",
+    "cache-loader": "^4.1.0",
+    "css-loader": "^3.6.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
@@ -44,7 +53,12 @@
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^6.0.9",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-loader": "15.9.2",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "engines": {
+    "node": ">=18"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
